force-app/main/default/objects/LogFile__c/LogFile__c.object-meta.xml
<CustomObject>
    <label>LogFile</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>LogFile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LogFiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>