force-app/main/default/objects/LogFile__c/fields/Body4__c.field-meta.xml
<CustomField>
    <fullName>Body4__c</fullName>
    <label>Body4</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>