force-app/main/default/objects/LogFile__c/fields/Body5__c.field-meta.xml
<CustomField>
    <fullName>Body5__c</fullName>
    <label>Body5</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>