force-app/main/default/objects/LogFile__c/fields/Current_Section__c.field-meta.xml
<CustomField>
    <fullName>Current_Section__c</fullName>
    <label>Current Section</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>