force-app/main/default/objects/LogFile__c/fields/Date_Time_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Created__c</fullName>
    <label>Date/Time Created</label>
    <type>DateTime</type>
</CustomField>