force-app/main/default/objects/LogFile__c/fields/Integration_Record__c.field-meta.xml
<CustomField>
    <fullName>Integration_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration Record</label>
    <referenceTo>HFS_IntegrationErrorTrackedBag__c</referenceTo>
    <relationshipLabel>LogFiles</relationshipLabel>
    <relationshipName>LogFiles</relationshipName>
    <type>Lookup</type>
</CustomField>