force-app/main/default/objects/LogFile__c/fields/LogFile_From_Resubmitted_Purchase__c.field-meta.xml
<CustomField>
    <fullName>LogFile_From_Resubmitted_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LogFile From Resubmitted Purchase</label>
    <type>Checkbox</type>
</CustomField>