force-app/main/default/objects/LogFile__c/fields/Page__c.field-meta.xml
<CustomField>
    <fullName>Page__c</fullName>
    <label>Page</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>