force-app/main/default/objects/LogFile__c/fields/Purge__c.field-meta.xml
<CustomField>
    <fullName>Purge__c</fullName>
    <formula>IF(CreatedDate &lt; (NOW() - 90),&apos;TRUE&apos;,&apos;FALSE&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purge</label>
    <type>Text</type>
</CustomField>