force-app/main/default/objects/LogFile__c/listViews/CertificationErrors.listView-meta.xml
<ListView>
    <fullName>CertificationErrors</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Date_Time_Created__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Update a certification to be Batch Complete</value>
    </filters>
    <label>CertificationErrors</label>
    <language>en_US</language>
</ListView>