force-app/main/default/objects/LogFile__c/listViews/HFS_Errors.listView-meta.xml
<ListView>
    <fullName>HFS_Errors</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Body__c</columns>
    <columns>Body2__c</columns>
    <columns>Date_Time_Created__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>contains</operation>
        <value>Hands Free Shopping</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Automated Process</value>
    </filters>
    <label>HFS Errors</label>
    <language>en_US</language>
</ListView>